syntax = "proto3";

option csharp_namespace = "Common.Protos.ReplicaCommunication";

service SimpleReplicaCommunicationService {
	rpc Lock(LockRequest) returns (LockResponse);
	rpc Write(WriteRequest) returns (WriteResponse);
}

service AdvancedReplicaCommunicationService {
	rpc BroadcastWrite(BroadcastWriteRequest) returns (BroadcastWriteResponse);
	rpc BroadcastFailure(BroadcastFailureRequest) returns (BroadcastFailureResponse);
}

message LockRequest {
	string partition_id = 1;
	string object_id = 2;
}

message LockResponse {}

message WriteRequest {
	string partition_id = 1;
	string object_id = 2;
	string object_value = 3;
}

message WriteResponse {}

message BroadcastWriteRequest {
	string partition_id = 1;
	MessageId message_id = 2;
	string key = 3;
	TimestampedValue timestamped_value = 4;
	VectorClock replicaTimestamp = 5;
}

message BroadcastWriteResponse {}

message MessageId {
	string server_id = 1;
	int32 server_counter = 2;
}

message TimestampedValue {
	string object_value = 1;
	VectorClock timestamp = 2;
	string last_write_server_id = 3;
}

message VectorClock {
	repeated string server_ids = 1;
	repeated int32 server_clocks = 2;
}

message BroadcastFailureRequest {
	string partition_id = 1;
	MessageId message_id = 2;
	string failed_server_id = 3;
}

message BroadcastFailureResponse {}
